Completing contributions template and biobjective setting in the report

--- a/latex/contributions/contributions-template.tex
+++ b/latex/contributions/contributions-template.tex
@@ -6,7 +6,7 @@
 \geometry{hmargin=2.5cm,vmargin=1.5cm}
 \begin{document}
 \title{Statements of Individual Contributions}
-\author{Karim Kouki, Ahmed Mazari, Daro Ozad, \\ Mihaela Sorostinean, Aris Tritas}
+\author{Karim Kouki, Ahmed Mazari, Daro Heng, \\ Mihaela Sorostinean, Aris Tritas}
 \maketitle
 \begin{abstract}
 This document details the individual contributions of each group member to the outcome of the group project, benchmarking ``Indicator-based Evolutionary Algorithm with Epsilon indicator'' with the COCO platform. It also includes an anti-plagiarism phrase that needs to be signed by every group member.
@@ -18,19 +18,27 @@ This document details the individual contributions of each group member to the o
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection*{Karim Kouki}
-I ate all the donuts.
+Helped with the basic structure of the algorithm thanks to article understanding. 
+Based on observations of previous runs and on intuition some promising tuning of parameters were made. 
+A gridding protocol was developed with the derandomized strategy that consisted in assuming the problem was separable and thus trying several neighboring sets of parameters to identify the best runs.
 
 \subsection*{Ahmed Mazari}
-I cooked them.
+Contributed to the basic structure of the algorithm. 
+Suggested other strategies when the runs were not satisfying by selecting other complementary articles. 
+Tried the isotropic mutation lead and lead extensive tests to understand better the performance of such strategy on all the tested problems. 
+Moreover, scheduled and organized weekly group meeting to discuss the advances, obstacles of each of us, new ideas and deciding together what to do next (each member task).
 
-\subsection*{Daro Ozad}
-I hid them.
+\subsection*{Daro Heng}
+Helped with the debugging process. 
+Found implementation problems and took part in implementing subtleties of the code: taking memory management and complexity into account so that the code could run in an acceptable time.
 
 \subsection*{Mihaela Sorostinean}
-I played the saxophone.
+Was in charge of project management and putting ideas together in general.
+Comprehension of the articles helped with the interpretations of runs. 
+Helped a lot with reporting.
 
 \subsection*{Aris Tritas}
-I mainly slept.
+Understanding of the article, implementation of the algorithm. Also drove important changes on the mutation and recombination. Organized version management of the code and shared subtleties with other members of the group. Decided which were the best runs.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Anti-Plagiarism Statement}
