--- a/latex/final_report/report.bib
+++ b/latex/final_report/report.bib
@@ -61,4 +61,14 @@
   publisher={Springer}
 }
 
+@article{deb2002fast,
+  title={A fast and elitist multiobjective genetic algorithm: NSGA-II},
+  author={Deb, Kalyanmoy and Pratap, Amrit and Agarwal, Sameer and Meyarivan, TAMT},
+  journal={IEEE transactions on evolutionary computation},
+  volume={6},
+  number={2},
+  pages={182--197},
+  year={2002},
+  publisher={IEEE}
+}
 
